<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <artifactId>spring-boot-starter-parent</artifactId>
        <groupId>org.springframework.boot</groupId>
        <version>2.5.0</version>
    </parent>
    <groupId>com.robustel</groupId>
    <artifactId>elevator-dispatching</artifactId>
    <packaging>pom</packaging>
    <version>1.0-SNAPSHOT</version>
    <modules>
        <module>domain-context-dispatching</module>
        <module>adapter-persistence-mongodb</module>
        <module>adapter-resource</module>
        <module>adapter-iot-thing</module>
        <module>elevator-dispatching-bootstrap</module>
        <module>adapter-auth-id</module>
    </modules>

    <properties>
        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>
    </properties>
    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>com.robustel</groupId>
                <artifactId>robustel-ddd-spring-boot-starter</artifactId>
                <version>1.0-SNAPSHOT</version>
            </dependency>
            <dependency>
                <groupId>com.robustel</groupId>
                <artifactId>robustel-mongo-spring-boot-starter</artifactId>
                <version>1.0-SNAPSHOT</version>
            </dependency>
            <dependency>
                <groupId>com.robustel</groupId>
                <artifactId>ddd-core</artifactId>
                <version>1.0-SNAPSHOT</version>
            </dependency>
            <dependency>
                <groupId>com.robustel</groupId>
                <artifactId>iot-thing-bootstrap</artifactId>
                <version>2.0.3</version>
            </dependency>
            <!-- for test -->
            <dependency>
                <groupId>org.mockito</groupId>
                <artifactId>mockito-junit-jupiter</artifactId>
                <version>3.9.0</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>org.powermock</groupId>
                <artifactId>powermock-module-junit4-common</artifactId>
                <version>1.6.5</version>
                <scope>test</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>
</project>